# from-illusion-to-insight

./: .gitignore  AUDIT_CHECKLIST.md  AUDIT_COMPLEX_MODEL.md  COMPLETE_AUDIT_REPORT.md  FILE_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt  verify_refactoring.py
notebooks/: codebert-experiment.ipynb  complex-model-sdp.ipynb  methodofdifference.ipynb  sdp-retrieve-previous-file.ipynb
src/sdp/: __init__.py  cli.py  config.py  main.py
src/sdp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sdp/analysis/: __init__.py  diff.py  file_matching.py  hunk.py  java_parse.py  metrics.py  verdict_parser.py
src/sdp/analysis/method_of_difference/: __init__.py  examples.py  generator.py  legacy.py  params.py  partition.py
src/sdp/experiments/: __init__.py  evaluator.py  orchestrator.py  prompt_runner.py  visualization.py
src/sdp/llm/: __init__.py  experts.py  wrapper.py
src/sdp/models/: codebert.py
src/sdp/prompts/: __init__.py  analyzer.py  judge.py  loader.py  proposer.py  skeptic.py
src/sdp/prompts/roles/: __init__.py
